Almose Done Front End UI

--- a/about.html
+++ b/about.html
@@ -99,9 +99,9 @@
 							<div class="top-bar-right">
 								<ul class="custom">
 									<li>
-										<a href="patner.html" class="text-dark">
+										<a href="partner.html" class="text-dark">
 											<i class="fa fa-user-plus" aria-hidden="true"></i>
-											<span>Become A Patner</span>
+											<span>Become A Partner</span>
 										</a>
 									</li>
 									<li>
@@ -329,24 +329,6 @@
 		</section>
 		<!--/How to work-->
 
-		<!--post section-->
-		<section>
-			<div class="cover-image sptb bg-background-color" data-image-src="../assets/images/banners/banner4.jpg">
-				<div class="content-text mb-0">
-					<div class="container">
-						<div class="text-center text-white ">
-							<h2 class="mb-2 display-5">Are you ready for the posting you ads on this Site?</h2>
-							<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-							<div class="mt-5">
-								<a href="ad-posts.html" class="btn btn-primary btn-pill">Free Post Ad</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--/post section-->
-
 		<!--section-->
 		<section class="sptb">
 			<div class="container">
@@ -438,55 +420,6 @@
 		</section>
 		<!--/section-->
 
-		<!--Statistics-->
-		<section>
-			<div class="about-1 cover-image sptb bg-background-color" data-image-src="../assets/images/banners/banner5.jpg">
-				<div class="content-text mb-0 text-white info">
-					<div class="container">
-						<div class="row text-center">
-							<div class="col-lg-3 col-md-6">
-								<div class="counter-status md-mb-0">
-									<div class="counter-icon text-danger">
-										<i class="icon icon-people"></i>
-									</div>
-									<h5>Clients</h5>
-									<h2 class="counter mb-0">2569</h2>
-								</div>
-							</div>
-							<div class="col-lg-3 col-md-6">
-								<div class="counter-status status-1 md-mb-0">
-									<div class="counter-icon text-warning">
-										<i class="icon icon-rocket"></i>
-									</div>
-									<h5>Total Sales</h5>
-									<h2 class="counter mb-0">1765</h2>
-								</div>
-							</div>
-							<div class="col-lg-3 col-md-6">
-								<div class="counter-status status md-mb-0">
-									<div class="counter-icon text-primary">
-										<i class="icon icon-docs"></i>
-									</div>
-									<h5>Total Projects</h5>
-									<h2 class="counter mb-0">846</h2>
-								</div>
-							</div>
-							<div class="col-lg-3 col-md-6">
-								<div class="counter-status status">
-									<div class="counter-icon text-success">
-										<i class="icon icon-emotsmile"></i>
-									</div>
-									<h5>Happy Customers</h5>
-									<h2 class="counter">7253</h2>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--/Statistics-->
-
 		<!--section-->
 		<section class="sptb bg-white">
 			<div class="container">
@@ -502,7 +435,7 @@
 									<div class="team-img">
 										<img src="../assets/images/faces/male/1.jpg" class="img-thumbnail rounded-circle alt=" alt="">
 									</div>
-									<h4 class="font-weight-bold dark-grey-text mt-4">Tracey	Poole</h4>
+									<h4 class="font-weight-bold dark-grey-text mt-4">Narayan Shaw</h4>
 									<h6 class="font-weight-bold blue-text ">Web Designer</h6>
 									<p class="font-weight-normal dark-grey-text">
 									<i class="fa fa-quote-left pr-2"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.</p>
@@ -524,7 +457,7 @@
 									<div class="team-img">
 										<img src="../assets/images/faces/female/1.jpg" class="img-thumbnail rounded-circle alt=" alt="">
 									</div>
-									<h4 class="font-weight-bold dark-grey-text mt-4">Harry	Walker</h4>
+									<h4 class="font-weight-bold dark-grey-text mt-4">Shiba Bhai</h4>
 									<h6 class="font-weight-bold blue-text ">Web Developer</h6>
 									<p class="font-weight-normal dark-grey-text">
 									<i class="fa fa-quote-left pr-2"></i>Ut enim ad minima veniam, quis nostrum exercitationem ullam quis nostrum  corporis suscipit laboriosam, nisi ut aliquid commodi.</p>
@@ -546,7 +479,7 @@
 									<div class="team-img">
 										<img src="../assets/images/faces/male/2.jpg" class="img-thumbnail rounded-circle alt=" alt="">
 									</div>
-									<h4 class="font-weight-bold dark-grey-text mt-4">Paul White</h4>
+									<h4 class="font-weight-bold dark-grey-text mt-4">Rassel</h4>
 									<h6 class="font-weight-bold blue-text ">Photographer</h6>
 									<p class="font-weight-normal dark-grey-text">
 									<i class="fa fa-quote-left pr-2"></i>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.</p>
