--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		</div>
 
 		<!-- Popup Login-->
-		<!-- <div id="myModal" class="modal fade">
+		<div id="myModal" class="modal fade">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content ">
 					<div class="modal-header">
@@ -125,7 +125,7 @@
 					</div>
 				</div>
 			</div>
-		</div> -->
+		</div>
 		<!-- End Popup Login-->
 
 		<!--Topbar-->
@@ -152,9 +152,9 @@
 							<div class="top-bar-right">
 								<ul class="custom">
 									<li>
-										<a href="patner.html" class="text-dark">
+										<a href="partner.html" class="text-dark">
 											<i class="fa fa-user-plus" aria-hidden="true"></i>
-											<span>Become A Patner</span>
+											<span>Become A Partner</span>
 										</a>
 									</li>
 									<li>
@@ -526,8 +526,261 @@
 		</section>
 		<!--/Categories-->
 
+		<!--Recommended Services-->
+		<section class="sptb bg-white mb-3">
+			<div class="container">
+				<div class="section-title center-block text-left">
+					<h3>Recommended Services</h3>
+				</div>
+				<div id="myCarousel2" class="owl-carousel owl-carousel-icons2">
+					<!-- Wrapper for carousel items -->
+					<div class="item">
+						<div class="card mb-0">
+							<div class="item-card7-imgs">
+								<a href="single_services.html"></a>
+								<img src="assets/images/products/products/b3.jpg" alt="img" class="cover-image">
+							</div>
+							<div class="item-card7-overlaytext">
+								<a href="single_category.html" class="text-white"> Beauty & Spa </a>
+								<h4  class="mb-0">₹ 398.99</h4>
+							</div>
+							<div class="card-body">
+								<div class="item-card7-desc">
+									<div class="item-card7-text">
+										<a href="single_services.html" class="text-dark"><h4 class="">Sondarya Beauty & Spa</h4></a>
+									</div>
+									<ul class="item-cards7-ic mb-0">
+										<li>
+											<a href="#">
+												<span class="text-muted">
+													<i class="icon icon-eye mr-1"></i> 
+													22 Hired
+												</span>
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-location-pin text-muted mr-1"></i> Kolkata
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-event text-muted mr-1"></i> 
+												5 hours ago
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-phone text-muted mr-1"></i> 
+												7645 245 153
+											</a>
+										</li>
+									</ul>
+
+									<a href="#" class="btn btn-block btn-primary mb-0 mt-4">Order Now</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="card mb-0">
+							<div class="item-card7-imgs">
+								<a href="single_services.html"></a>
+								<img src="assets/images/products/products/b3.jpg" alt="img" class="cover-image">
+							</div>
+							<div class="item-card7-overlaytext">
+								<a href="single_category.html" class="text-white"> Beauty & Spa </a>
+								<h4  class="mb-0">₹ 398.99</h4>
+							</div>
+							<div class="card-body">
+								<div class="item-card7-desc">
+									<div class="item-card7-text">
+										<a href="single_services.html" class="text-dark"><h4 class="">Sondarya Beauty & Spa</h4></a>
+									</div>
+									<ul class="item-cards7-ic mb-0">
+										<li>
+											<a href="#">
+												<span class="text-muted">
+													<i class="icon icon-eye mr-1"></i> 
+													22 Hired
+												</span>
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-location-pin text-muted mr-1"></i> Kolkata
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-event text-muted mr-1"></i> 
+												5 hours ago
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-phone text-muted mr-1"></i> 
+												7645 245 153
+											</a>
+										</li>
+									</ul>
+
+									<a href="#" class="btn btn-block btn-primary mb-0 mt-4">Order Now</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="card mb-0">
+							<div class="item-card7-imgs">
+								<a href="single_services.html"></a>
+								<img src="assets/images/products/products/b3.jpg" alt="img" class="cover-image">
+							</div>
+							<div class="item-card7-overlaytext">
+								<a href="single_category.html" class="text-white"> Beauty & Spa </a>
+								<h4  class="mb-0">₹ 398.99</h4>
+							</div>
+							<div class="card-body">
+								<div class="item-card7-desc">
+									<div class="item-card7-text">
+										<a href="single_services.html" class="text-dark"><h4 class="">Sondarya Beauty & Spa</h4></a>
+									</div>
+									<ul class="item-cards7-ic mb-0">
+										<li>
+											<a href="#">
+												<span class="text-muted">
+													<i class="icon icon-eye mr-1"></i> 
+													22 Hired
+												</span>
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-location-pin text-muted mr-1"></i> Kolkata
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-event text-muted mr-1"></i> 
+												5 hours ago
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-phone text-muted mr-1"></i> 
+												7645 245 153
+											</a>
+										</li>
+									</ul>
+
+									<a href="#" class="btn btn-block btn-primary mb-0 mt-4">Order Now</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="card mb-0">
+							<div class="item-card7-imgs">
+								<a href="single_services.html"></a>
+								<img src="assets/images/products/products/b3.jpg" alt="img" class="cover-image">
+							</div>
+							<div class="item-card7-overlaytext">
+								<a href="single_category.html" class="text-white"> Beauty & Spa </a>
+								<h4  class="mb-0">₹ 398.99</h4>
+							</div>
+							<div class="card-body">
+								<div class="item-card7-desc">
+									<div class="item-card7-text">
+										<a href="single_services.html" class="text-dark"><h4 class="">Sondarya Beauty & Spa</h4></a>
+									</div>
+									<ul class="item-cards7-ic mb-0">
+										<li>
+											<a href="#">
+												<span class="text-muted">
+													<i class="icon icon-eye mr-1"></i> 
+													22 Hired
+												</span>
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-location-pin text-muted mr-1"></i> Kolkata
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-event text-muted mr-1"></i> 
+												5 hours ago
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-phone text-muted mr-1"></i> 
+												7645 245 153
+											</a>
+										</li>
+									</ul>
+
+									<a href="#" class="btn btn-block btn-primary mb-0 mt-4">Order Now</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="card mb-0">
+							<div class="item-card7-imgs">
+								<a href="single_services.html"></a>
+								<img src="assets/images/products/products/b3.jpg" alt="img" class="cover-image">
+							</div>
+							<div class="item-card7-overlaytext">
+								<a href="single_category.html" class="text-white"> Beauty & Spa </a>
+								<h4  class="mb-0">₹ 398.99</h4>
+							</div>
+							<div class="card-body">
+								<div class="item-card7-desc">
+									<div class="item-card7-text">
+										<a href="single_services.html" class="text-dark"><h4 class="">Sondarya Beauty & Spa</h4></a>
+									</div>
+									<ul class="item-cards7-ic mb-0">
+										<li>
+											<a href="#">
+												<span class="text-muted">
+													<i class="icon icon-eye mr-1"></i> 
+													22 Hired
+												</span>
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-location-pin text-muted mr-1"></i> Kolkata
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-event text-muted mr-1"></i> 
+												5 hours ago
+											</a>
+										</li>
+										<li>
+											<a href="#!" class="icons">
+												<i class="icon icon-phone text-muted mr-1"></i> 
+												7645 245 153
+											</a>
+										</li>
+									</ul>
+
+									<a href="#" class="btn btn-block btn-primary mb-0 mt-4">Order Now</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--/Featured Services-->
+
 		<!--Web Solution-->
-		<section class="sptb bg-white">
+		<section class="sptb bg-patterns">
 			<div class="container">
 				<div class="section-title center-block text-left">
 					<h3>Web Solution</h3>
@@ -780,7 +1033,7 @@
 		<!--/Web Solution-->
 
 		<!--Plumber-->
-		<section class="sptb bg-white">
+		<section class="sptb bg-patterns">
 			<div class="container">
 				<div class="section-title center-block text-left">
 					<h3>Plumber</h3>
@@ -1032,11 +1285,11 @@
 		</section>
 		<!--/Web Solution-->
 
-        <!--Recommended Services-->
-		<section class="sptb bg-patterns mb-3">
+		<!--Paker & Mover-->
+		<section class="sptb bg-patterns">
 			<div class="container">
 				<div class="section-title center-block text-left">
-					<h3>Recommended Services</h3>
+					<h3>Plumber</h3>
 				</div>
 				<div id="myCarousel2" class="owl-carousel owl-carousel-icons2">
 					<!-- Wrapper for carousel items -->
@@ -1283,7 +1536,7 @@
 				</div>
 			</div>
 		</section>
-		<!--/Featured Services-->
+		<!--/Web Solution-->
 
 		<!-- Statistics -->
 		<section class="bg-white mb-0 mt-0">
