--- a/partner.html
+++ b/partner.html
@@ -28,7 +28,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
 		<!-- Title -->
-		<title>Patner | Moseva</title>
+		<title>Partner | Moseva</title>
 
 		<!-- Bootstrap Css -->
 		<link href="assets/plugins/bootstrap-4.3.1-dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -99,9 +99,9 @@
 							<div class="top-bar-right">
 								<ul class="custom">
 									<li>
-										<a href="patner.html" class="text-dark">
+										<a href="partner.html" class="text-dark">
 											<i class="fa fa-user-plus" aria-hidden="true"></i>
-											<span>Become A Patner</span>
+											<span>Become A Partner</span>
 										</a>
 									</li>
 									<li>
@@ -229,10 +229,10 @@
 				<div class="header-text mb-0">
 					<div class="container">
 						<div class="text-center text-white ">
-							<h1 class="">Patner</h1>
+							<h1 class="">Partner</h1>
 							<ol class="breadcrumb text-center">
 								<li class="breadcrumb-item"><a href="index.html">Home</a></li>
-								<li class="breadcrumb-item active text-white" aria-current="page">Patner</li>
+								<li class="breadcrumb-item active text-white" aria-current="page">Partner</li>
 							</ol>
 						</div>
 					</div>
