--- a/user_dashboard.html
+++ b/user_dashboard.html
@@ -93,26 +93,48 @@
 										</li>
 									</ul>
 								</div>
+
+								<div class="clearfix">
+									<ul class="contact border-right">
+										<li class="mr-5">
+											<a href="help.html" class="callnumber text-dark">
+												<span class="text-muted">
+														<i class="fa fa-info mr-1" aria-hidden="true"></i> Help center
+												</span>
+											</a>
+										</li>
+									</ul>
+								</div>
+
+								<div class="clearfix">
+									<ul class="contact border-right">
+										<li class="mr-5">
+											<a href="#!" class="callnumber text-dark">
+												<span class="text-muted">
+														<i class="fa fa-history mr-1" aria-hidden="true"></i> Booking History
+												</span>
+											</a>
+										</li>
+									</ul>
+								</div>
 							</div>
 						</div>
 						<div class="col-xl-4 col-lg-4 col-sm-8 col-5">
 							<div class="top-bar-right">
 								<ul class="custom">
-									<li>
-										<a href="patner.html" class="text-dark">
-											<i class="fa fa-user-plus" aria-hidden="true"></i>
-											<span>Become A Patner</span>
-										</a>
-									</li>
-									<li>
-										<a href="login.html" class="text-dark">
-											<i class="fa fa-sign-in mr-1"></i> <span>Login</span>
-										</a>
-									</li>
-									<li>
-										<a href="register.html" class="text-dark">
-											<i class="fa fa-user mr-1"></i> <span>Register</span>
-										</a>
+									<li class="dropdown">
+										<a href="#" class="text-dark" data-toggle="dropdown"><i class="fa fa-user mr-1"></i><span>User Name</span></a>
+										<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+											<a class="dropdown-item" href="#">
+												<i class="dropdown-icon icon icon-bell"></i> Notifications
+											</a>
+											<a href="#" class="dropdown-item" >
+												<i class="dropdown-icon  icon icon-settings"></i> My Orders
+											</a>
+											<a class="dropdown-item" href="#">
+												<i class="dropdown-icon icon icon-power"></i> Log out
+											</a>
+										</div>
 									</li>
 								</ul>
 							</div>
@@ -240,6 +262,397 @@
 			</div>
 		</section>
 		<!--/Breadcrumb-->
+
+		<!--User Profile-->
+		<section class="sptb">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="card">
+							<div class="card-header">
+								<div class="wideget-user-tab">
+									<div class="tab-menu-heading">
+										<div class="tabs-menu1">
+											<ul class="nav">
+												<li class=""><a href="#tab-1" class="active" data-toggle="tab">Profile</a></li>
+												<li><a href="#tab-2" data-toggle="tab" class="">My Order <span class="badge badge-primary badge-pill">01</span></a></li>
+												<li><a href="#tab-3" data-toggle="tab" class="">Transection History <span class="badge badge-primary badge-pill">03</span></a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="card mb-0">
+							<div class="card-body">
+								<div class="border-0">
+									<div class="tab-content">
+										<div class="tab-pane active" id="tab-1">
+											<div class="card-header">
+												<h3 class="card-title">User Details</h3>
+												<div class="card-options">
+													<button type="button" class="btn btn-secondary mr-2" data-toggle="modal" data-target="#update">
+														Update
+													</button>
+													<button type="button" class="btn btn-link mr-2" data-toggle="modal" data-target="#password">
+														Change Password
+													</button>
+												</div>
+											</div>
+											<div class="card-body">
+												<ul class="list-unstyled widget-spec mb-0">
+													<li class="">
+														<i class="fa fa-caret-right text-success" aria-hidden="true"></i> 
+														Name: 
+													</li>
+													<li class="">
+														<i class="fa fa-caret-right text-success" aria-hidden="true"></i> Gender: 
+													</li>
+													<li class="">
+														<i class="fa fa-caret-right text-success" aria-hidden="true"></i> Phone Number: }
+													</li>
+													<li class="">
+														<i class="fa fa-caret-right text-success" aria-hidden="true"></i> Email: 
+													</li>
+													<li class="">
+														<i class="fa fa-caret-right text-success" aria-hidden="true"></i> Address: 
+													</li>
+													<li class="">
+														<i class="fa fa-caret-right text-success" aria-hidden="true"></i> PIN Code: 
+													</li>
+												</ul>
+											</div>
+										</div>
+										<div class="tab-pane userprof-tab" id="tab-2">
+											<div class="card-header">
+												<h3 class="card-title">Orders List</h3>
+											</div>
+											<div class="card-body">
+												<div class="table-responsive border-top">
+													<table class="table table-bordered table-hover text-nowrap">
+														<thead>
+															<tr>
+																<th>Tracking ID</th>
+																<th>Service</th>
+																<th>Category</th>
+																<th>Date</th>
+																<th>Price</th>
+																<th>Status</th>
+																<th>Action</th>
+															</tr>
+														</thead>
+														<tbody>
+															<tr>
+																<td class="text-primary">#89345</td>
+																<td>Service One</td>
+																<td>Plumber</td>
+																<td>07-6-2019</td>
+																<td class="font-weight-semibold fs-16">₹ 893</td>
+																<td>
+																	<a href="#" class="badge badge-danger">Pending</a>
+																</td>
+																<td>
+																	<button type="button" class="btn btn-primary btn-sm mr-2" data-toggle="modal" data-target="#track">
+																		<i class="fa fa-thumb-tack "></i>
+																	</button>
+
+																	<button type="button" class="btn btn-secondary btn-sm mr-2" data-toggle="modal" data-target="#cancel">
+																		<i class="fa fa-ban"></i>
+																	</button>
+																</td>
+															</tr>
+														</tbody>
+													</table>
+												</div>
+												<ul class="pagination">
+													<li class="page-item page-prev disabled">
+														<a class="page-link" href="#" tabindex="-1">Prev</a>
+													</li>
+													<li class="page-item active"><a class="page-link" href="#">1</a></li>
+													<li class="page-item"><a class="page-link" href="#">2</a></li>
+													<li class="page-item"><a class="page-link" href="#">3</a></li>
+													<li class="page-item page-next">
+														<a class="page-link" href="#">Next</a>
+													</li>
+												</ul>
+											</div>
+										</div>
+										<div class="tab-pane userprof-tab" id="tab-3">
+											<div class="card-header">
+												<h3 class="card-title">Transections</h3>
+											</div>
+											<div class="card-body">
+												<div class="table-responsive border-top">
+													<table class="table table-bordered table-hover text-nowrap">
+														<thead>
+															<tr>
+																<th>Invoice ID</th>
+																<th>Service</th>
+																<th>Category</th>
+																<th>Order Date</th>
+																<th>Price</th>
+																<th>Complete Date</th>
+																<th>Action</th>
+															</tr>
+														</thead>
+														<tbody>
+															<tr>
+																<td>#INV-348</td>
+																<td>Service One</td>
+																<td>Plumber</td>
+																<td>07-09-2019</td>
+																<td class="font-weight-semibold fs-16">₹ 889</td>
+																<td>17-10-2019</td>
+																<td>
+																	<button type="button" class="btn btn-primary btn-sm mr-2" data-toggle="modal" data-target="#view">
+																		<i class="fa fa-eye"></i>
+																	</button>
+
+																	<button type="button" class="btn btn-secondary btn-sm mr-2" data-toggle="modal" data-target="#delete">
+																		<i class="fa fa-trash-o"></i>
+																	</button>
+																</td>
+															</tr>
+															<tr>
+																<td>#INV-348</td>
+																<td>Service One</td>
+																<td>Plumber</td>
+																<td>07-09-2019</td>
+																<td class="font-weight-semibold fs-16">₹ 889</td>
+																<td>17-10-2019</td>
+																<td>
+																	<button type="button" class="btn btn-primary btn-sm mr-2" data-toggle="modal" data-target="#view">
+																		<i class="fa fa-eye"></i>
+																	</button>
+
+																	<button type="button" class="btn btn-secondary btn-sm mr-2" data-toggle="modal" data-target="#delete">
+																		<i class="fa fa-trash-o"></i>
+																	</button>
+																</td>
+															</tr>
+															<tr>
+																<td>#INV-348</td>
+																<td>Service One</td>
+																<td>Plumber</td>
+																<td>07-09-2019</td>
+																<td class="font-weight-semibold fs-16">₹ 889</td>
+																<td>17-10-2019</td>
+																<td>
+																	<button type="button" class="btn btn-primary btn-sm mr-2" data-toggle="modal" data-target="#view">
+																		<i class="fa fa-eye"></i>
+																	</button>
+
+																	<button type="button" class="btn btn-secondary btn-sm mr-2" data-toggle="modal" data-target="#delete">
+																		<i class="fa fa-trash-o"></i>
+																	</button>
+																</td>
+															</tr>
+														</tbody>
+													</table>
+												</div>
+												<ul class="pagination">
+													<li class="page-item page-prev disabled">
+														<a class="page-link" href="#" tabindex="-1">Prev</a>
+													</li>
+													<li class="page-item active"><a class="page-link" href="#">1</a></li>
+													<li class="page-item"><a class="page-link" href="#">2</a></li>
+													<li class="page-item"><a class="page-link" href="#">3</a></li>
+													<li class="page-item page-next">
+														<a class="page-link" href="#">Next</a>
+													</li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+<!-- ====================================================================================== -->
+		<!-- Popup Update Profile-->
+		<div id="update" class="modal fade">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content ">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLabel">Update Profile</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">×</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<div class="single-page customerpage " >
+							<div class="wrapper wrapper2 box-shadow-0">
+								<form id="login" class="card-body" tabindex="500">
+									<div class="form-group">
+										<label for="name" class="col-form-label">Name</label>
+										<input disabled type="text" class="form-control" id="staticEmail" value="#">
+									</div>
+
+									<div class="form-group">
+										<label for="gender" class="col-form-label">Gender</label>
+										<input disabled type="text" class="form-control" id="staticEmail" value="#">
+									</div>
+
+									<div class="form-group">
+										<label for="email" class="col-form-label">Email</label>
+										<input type="email" class="form-control" id="staticEmail">
+									</div>
+
+									<div class="form-group">
+										<label for="phone" class="col-form-label">Phone number</label>
+										<input type="text" class="form-control" id="staticEmail">
+									</div>
+
+									<div class="form-group">
+										<label for="address" class="col-form-label">Address</label>
+										<input type="text" class="form-control" id="staticEmail">
+									</div>
+
+									<div class="form-group">
+										<label for="pin" class="col-form-label">PIN Code</label>
+										<input type="text" class="form-control" id="staticEmail">
+									</div>	
+
+									<br>							
+
+									<div class="card-footer">
+										<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+										<button type="submit" class="btn btn-primary">Update</button>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End Popup Profile-->
+
+		<!-- Popup Update Password-->
+		<div id="password" class="modal fade">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content ">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLabel">Update Password</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">×</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<div class="single-page customerpage " >
+							<div class="wrapper wrapper2 box-shadow-0">
+								<form id="login" class="card-body" tabindex="500">
+									<div class="form-group">
+										<label for="password" class="col-form-label">Current Password</label>
+										<input type="password" class="form-control" id="staticEmail">
+									</div>
+
+									<div class="form-group">
+										<label for="password" class="col-form-label">New Password</label>
+										<input type="password" class="form-control" id="staticEmail">
+									</div>
+
+									<div class="form-group">
+										<label for="password" class="col-form-label">Re-enter Password</label>
+										<input type="password" class="form-control" id="staticEmail">
+									</div>
+
+									<br>							
+
+									<div class="card-footer">
+										<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+										<button type="submit" class="btn btn-primary">Update</button>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End Popup Password-->
+
+		<!-- Popup Track-->
+		<div id="track" class="modal fade">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content ">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLabel">Order Status</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">×</span>
+						</button>
+					</div>
+					<div class="modal-body">
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End Popup Track-->
+
+		<!-- Popup Cancel-->
+		<div id="cancel" class="modal fade">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content w-70">
+					<div class="modal-body">
+						<h2>Are You Seure?</h2>
+						<hr>
+						<div class="text-right">
+							<button class="btn btn-danger mr-3">
+								Confirm
+							</button>
+							<button class="btn btn-dark">
+								Wait
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End Popup Cancel-->
+
+		<!-- Popup View-->
+		<div id="view" class="modal fade">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content ">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLabel">Order Status</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">×</span>
+						</button>
+					</div>
+					<div class="modal-body">
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End Popup View-->
+
+		<!-- Popup Delete-->
+		<div id="delete" class="modal fade">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content w-70">
+					<div class="modal-body">
+						<h2>Are You Seure?</h2>
+						<hr>
+						<div class="text-right">
+							<button class="btn btn-danger mr-3">
+								Delete
+							</button>
+							<button class="btn btn-dark">
+								Cancel
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End Popup Delete-->
+
+<!-- ====================================================================================== -->
 
 		<!--Footer Section-->
 		<section>
