--- a/forgot_password.html
+++ b/forgot_password.html
@@ -99,9 +99,9 @@
 							<div class="top-bar-right">
 								<ul class="custom">
 									<li>
-										<a href="patner.html" class="text-dark">
+										<a href="partner.html" class="text-dark">
 											<i class="fa fa-user-plus" aria-hidden="true"></i>
-											<span>Become A Patner</span>
+											<span>Become A Partner</span>
 										</a>
 									</li>
 									<li>
@@ -240,6 +240,31 @@
 			</div>
 		</section>
 		<!--/Breadcrumb-->
+
+		<!--Forgot-Password-Section-->
+		<section class="sptb">
+			<div class="container customerpage">
+				<div class="row">
+					<div class="single-page" >
+						<div class="col-lg-5 col-xl-4 col-md-6 d-block mx-auto m9">
+							<div class="wrapper wrapper2 box-shadow-0">
+								<form id="login" class="card-body" tabindex="500">
+									<div class="mail">
+										<input type="email" name="mail">
+										<label>Email Address</label>
+									</div>
+									<div class="submit">
+										<a class="btn btn-primary btn-block" href="#">Re-set Password</a>
+									</div>
+									<p class="text-dark mb-0">remember Password?<a href="login.html" class="text-primary ml-1">Sign In</a></p>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--/Forgot-Password-Section-->
 
 		<!--Footer Section-->
 		<section>
