--- a/help.html
+++ b/help.html
@@ -99,9 +99,9 @@
 							<div class="top-bar-right">
 								<ul class="custom">
 									<li>
-										<a href="patner.html" class="text-dark">
+										<a href="partner.html" class="text-dark">
 											<i class="fa fa-user-plus" aria-hidden="true"></i>
-											<span>Become A Patner</span>
+											<span>Become A Partner</span>
 										</a>
 									</li>
 									<li>
