--- a/login.html
+++ b/login.html
@@ -99,9 +99,9 @@
 							<div class="top-bar-right">
 								<ul class="custom">
 									<li>
-										<a href="patner.html" class="text-dark">
+										<a href="partner.html" class="text-dark">
 											<i class="fa fa-user-plus" aria-hidden="true"></i>
-											<span>Become A Patner</span>
+											<span>Become A Partner</span>
 										</a>
 									</li>
 									<li>
@@ -240,6 +240,53 @@
 			</div>
 		</section>
 		<!--/Breadcrumb-->
+
+		<!--Login-Section-->
+		<section class="sptb">
+			<div class="container customerpage">
+				<div class="row">
+					<div class="single-page" >
+						<div class="col-lg-6 col-xl-5 col-md-6 d-block mx-auto m9">
+							<div class="wrapper wrapper2 box-shadow-0">
+								<form id="login" class="card-body" tabindex="500">
+									<div class="mail">
+										<input type="email" name="mail">
+										<label>Email or Phone</label>
+									</div>
+									<div class="passwd">
+										<input type="password" name="password">
+										<label>Password</label>
+									</div>
+									<div class="submit">
+										<a class="btn btn-primary btn-block" href="user_dashboard.html">Login</a>
+									</div>
+									<p class="mb-2"><a href="forgot_password.html" >Forgot Password</a></p>
+									<p class="text-dark mb-0">Don't have account?<a href="register.html" class="text-primary ml-1">Sign UP</a></p>
+								</form>
+								<hr class="divider">
+								<div class="card-body">
+									<div class="text-center">
+										<div class="btn-group hover-facebook">
+											<a href="https://www.facebook.com/" class="btn btn-icon mr-2">
+												<span class="fa fa-facebook"></span>
+												Login with Facebook
+											</a>
+										</div>
+										<div class="btn-group hover-google">
+											<a href="https://www.google.com/gmail/" class="btn mr-2 btn-icon">
+												<span class="fa fa-google"></span>
+												Login with Google
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--/Login-Section-->
 
 		<!--Footer Section-->
 		<section>
